--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a class="menu-item" href="cars.html">Cars</a>
             <a class="menu-item" href="motorBike.html">Motorbikes</a>
             <a class="menu-item" href="post.html">Post</a>
+            <a class="menu-item" href="post.html">Post</a>
         </div>
         </div>
         <div class="container-right">
