--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="container-right">
             <strong>Welcome to the biggest car-dealer in the region!</strong>
-            <p></p>
+            <p>Villa violador</p>
             <img class="homero-img" src="assets\MotorSports_Home.jpg" alt="ferraris">
         </div> 
             
