--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>MotorSports</title>
 </head>
 <body>
+    <header>
+
+    </header>
+
+<main>
      <div  id="container" class="container" >
         <div class="container-left">
         <div class="menu">
@@ -25,5 +30,9 @@
             
      
     </div>
+</main>
+<footer>
+
+</footer>
 </body>
 </html>
