--- a/post.html
+++ b/post.html
@@ -54,7 +54,7 @@
                            <label ><input id="diesel" type="radio" name="diesel" value="2" />Diesel</label> 
                            <label ><input id="gnc" type="radio" name="gnc" value="3" />Gnc</label>
                            <label ><input id="electric" type="radio" name="electric" value="4" />Electric</label>
-                  
+                  <p>Contact email:</p>
                 <input type="text" class="form-control" name="email" id="email" placeholder="Email">
                 <textarea cols="30" rows="10" name="description" id="description" placeholder="Description of your vehicle"></textarea>
                 <input  id="submit" type="submit" value="Submit" />
