--- a/post.html
+++ b/post.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="styles.css">
    <script src="script.js"></script>
-    <title>Web Starter</title>
+    <title>MotorSports</title>
 </head>
 <body>
      <div  id="container" class="container" >
