--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar bg-body-tertiary fixed-top">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">MotorSports</a>
+              <a class="navbar-brand" href="index.html">MotorSports</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="motorBike.html">Motorcycles</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="post.html">Post</a>
+                        <a class="nav-link" href="post.html">Post Your Vehicle</a>
                       </li>
                   </ul>
                 </div>
