--- a/cars.html
+++ b/cars.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
-    <title>Motor Sports</title>
+    <title>Cars</title>
 
 </head>
 <body>
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar bg-body-tertiary fixed-top">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#">MotorSports</a>
+                <a class="navbar-brand" href="index.html">MotorSports</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="motorBike.html">Motorcycles</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="post.html">Post</a>
+                        <a class="nav-link" href="post.html">Post Your Vehicle</a>
                       </li>
                   </ul>
                 </div>
