--- a/post.html
+++ b/post.html
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="motorBike.html">Motorcycles</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="post.html">Post Your Vehicle</a>
+                        <a class="nav-link" href="post.html">Promote Your Vehicle</a>
                       </li>
                   </ul>
                 </div>
@@ -71,10 +71,10 @@
                   </label> 
 
                   <p>Enter the model of your car:</p>
-                  <input type="text" class="form-control" name="Car-model" id="Car-model" placeholder="Car-Model">
+                  <input type="text" class="form-control" name="Car-model" id="Car-model" placeholder="Vehicle-Model">
 
                   <p>Enter the year of your car:</p>
-                  <input type="text" class="form-control" name="Car-year" id="Car-year" placeholder="Car-year">
+                  <input type="text" class="form-control" name="Car-year" id="Car-year" placeholder="Vehicle-year">
                 
                 
                 <p>Enter the kilometres that your car have:</p>
