--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="motorBike.html">Motorcycles</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="post.html">Post Your Vehicle</a>
+                        <a class="nav-link" href="post.html">Promote Your Vehicle</a>
                       </li>
                   </ul>
                 </div>
@@ -48,14 +48,13 @@
 
     <!-- Body: acá debería ir todo el contenido -->
     <main>
-        <section>
-            <h1><strong>Welcome to the biggest car-dealer in the region!</strong></h1>
-        </section>
-
         <div  id="container" class="container" >
                 <div class="container-left"></div>
                 <div class="container-right">
                     <img class="homero-img" src="assets\MotorSports_Home.jpg" alt="ferraris">
+                    <section>
+                      <h1><strong>Welcome to the biggest car-dealer in the region!</strong></h1>
+                    </section>
                 </div> 
         </div>
     </main>
