--- a/motorBike.html
+++ b/motorBike.html
@@ -37,7 +37,7 @@
                         <a class="nav-link" href="motorBike.html">Motorcycles</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="post.html">Post Your Vehicle</a>
+                        <a class="nav-link" href="post.html">Promote Your Vehicle</a>
                       </li>
                   </ul>
                 </div>
