--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         </section>
 
         <div  id="container" class="container" >
-                <div class="container-left"></div>
+                <!-- <div class="container-left"></div>-->
                 <div class="container-right">
-                    <img class="homero-img" src="assets\MotorSports_Home.jpg" alt="ferraris">
+                    <img class="ferraris-img" src="assets\MotorSports_Home.jpg" alt="ferraris">
                 </div> 
         </div>
     </main>
