--- a/cars.html
+++ b/cars.html
@@ -13,7 +13,7 @@
 <body>
 
     <!-- Navigation Bar -->
-    <header>
+    <header calss="main-header">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
               <a class="navbar-brand" href="index.html">MotorSports</a>
@@ -48,6 +48,12 @@
             <div class="container-right">
                 <img class="bio-img" src="assets\señor_x.webp" alt="homero">
                 <p class="text-bio">
+
+            <div id="carItems">
+
+            </div>
+
+
             </div> 
         </div>
     </main>
