--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <body>
 
         <!-- Navigation Bar -->
-    <header>
+    <header class="main-header">
           <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html">MotorSports</a>
+              <a class="navbar-brand" href="index.html">MotorSports</i></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -30,8 +30,12 @@
                       Cataloge
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="cars.html">Cars</a></li>
-                      <li><a class="dropdown-item" href="motorBike.html">Motorcycles</a></li>
+                      <li>
+                        <a class="dropdown-item" href="cars.html">Cars</a>
+                      </li>
+                      <li>
+                        <a class="dropdown-item" href="motorBike.html">Motorcycles</a>
+                      </li>
                     </ul>
                   </li>
                   <li class="nav-item">
