--- a/post.html
+++ b/post.html
@@ -13,7 +13,7 @@
 <body>
 
     <!-- Navigation Bar -->
-    <header>
+    <header class="main-header">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
               <a class="navbar-brand" href="index.html">MotorSports</a>
