--- a/cars.html
+++ b/cars.html
@@ -16,14 +16,14 @@
     <header calss="main-header">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html">MotorSports</a>
+              <a class="navbar-brand" href="index.html"><b>MotorSports</b></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                    <a class="nav-link active" aria-current="page" href="index.html" style="color:#ffffff;font: size 110%;">Home</a>
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -48,11 +48,79 @@
             <div class="container-right">
                 <img class="bio-img" src="assets\señor_x.webp" alt="homero">
                 <p class="text-bio">
+            <div class="item-section">
+              <div class="item-container">
+                <h3 id="car1">Vehicle name</h3>
+                <img src="assets\MotorSports_Home.jpg" name="" alt="acá iría la foto de un carro to cheto">
+                <h4 id="car-price1" style="color:goldenrod">$-</h4>
+                <h4>Features</h4>
+                <p id="car-item1"><i>empty</i></p>
+                <button class="button-ask">Ask</button>
+              </div>
 
-            <div id="carItems">
+              <div class="item-container">
+                <h3 id="car2">Vehicle name</h3>
+                <img src="assets\MotorSports_Home.jpg" name="" alt="acá iría la foto de un carro to cheto">
+                <h4 id="car-price2" style="color:goldenrod">$-</h4>
+                <h4>Features</h4>
+                <p id="car-item2"><i>empty</i></p>
+                <button class="button-ask">Ask</button>
+              </div>
 
+              <div class="item-container">
+                <h3 id="car3">Vehicle name</h3>
+                <img src="assets\MotorSports_Home.jpg" name="" alt="acá iría la foto de un carro to cheto">
+                <h4 id="car-price3" style="color:goldenrod">$-</h4>
+                <h4>Features</h4>
+                <p id="car-item3"><i>empty</i></p>
+                <button class="button-ask">Ask</button>
+              </div>
+
+              <div class="item-container">
+                <h3 id="car4">Vehicle name</h3>
+                <img src="assets\MotorSports_Home.jpg" name="" alt="acá iría la foto de un carro to cheto">
+                <h4 id="car-price4" style="color:goldenrod">$-</h4>
+                <h4>Features</h4>
+                <p id="car-item4"><i>empty</i></p>
+                <button class="button-ask">Ask</button>
+              </div>
+
+              <div class="item-container">
+                <h3 id="car5">Vehicle name</h3>
+                <img src="assets\MotorSports_Home.jpg" name="" alt="acá iría la foto de un carro to cheto">
+                <h4 id="car-price5" style="color:goldenrod">$-</h4>
+                <h4>Features</h4>
+                <p id="car-item5"><i>empty</i></p>
+                <button class="button-ask">Ask</button>
+              </div>
+
+              <div class="item-container" hidden>
+                <h3 id="car6">Vehicle name</h3>
+                <img src="photo.jpg" name="" alt="acá iría la foto de un carro to cheto">
+                <h4 id="car-price6" style="color:goldenrod">$-</h4>
+                <h4>Features</h4>
+                <p id="car-item6"><i>empty</i></p>
+                <button class="button-ask">Ask</button>
+              </div>
+
+              <div class="item-container" hidden>
+                <h3 id="car7">Vehicle name</h3>
+                <img src="photo.jpg" name="" alt="acá iría la foto de un carro to cheto">
+                <h4 id="car-price7" style="color:goldenrod">$-</h4>
+                <h4>Features</h4>
+                <p id="car-item7"><i>empty</i></p>
+                <button class="button-ask">Ask</button>
+              </div>
+
+              <div class="item-container" hidden>
+                <h3 id="car8">Vehicle name</h3>
+                <img src="photo.jpg" name="" alt="acá iría la foto de un carro to cheto">
+                <h4 id="car-price8" style="color:goldenrod">$-</h4>
+                <h4>Features</h4>
+                <p id="car-item8"><i>empty</i></p>
+                <button class="button-ask">Ask</button>
+              </div>
             </div>
-
 
             </div> 
         </div>
