--- a/motorBike.html
+++ b/motorBike.html
@@ -14,33 +14,33 @@
 
         <!-- Navigation Bar -->
     <header class="main-header">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="index.html">MotorSports</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavDropdown">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Cataloge
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="cars.html">Cars</a></li>
-                      <li><a class="dropdown-item" href="motorBike.html">Motorcycles</a></li>
-                    </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="post.html">Promote your vehicle</a>
-                  </li>                  
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html"><b>MotorSports</b></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="index.html" style="color:#ffffff;font: size 110%;">Home</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Cataloge
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="cars.html">Cars</a></li>
+                  <li><a class="dropdown-item" href="motorBike.html">Motorcycles</a></li>
                 </ul>
-              </div>
-            </div>
-          </nav>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="post.html">Promote your vehicle</a>
+              </li>                  
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
         <!-- Body: acá debería ir todo el contenido -->
     <main>
