--- a/motorBike.html
+++ b/motorBike.html
@@ -43,19 +43,88 @@
       </nav>
     </header>
         <!-- Body: acá debería ir todo el contenido -->
-    <main>
-        <div  id="container" class="container" >
-        
-            <div class="container-right">
-                <img class="bio-img" src="assets\señor_x.webp" alt="homero">
-                <p class="text-bio">Homero compra un ordenador después de no enterarse de que fumigarían la planta de energía nuclear. Él empieza a navegar por sitios webs y decide crear su propia página, pero al haber plagiado animaciones de otros sitios, se ve obligado a conservar el anonimato, haciéndose llamar Mr. X. ("Señor X") a través del internet.
-
-                Homero desea encontrar noticias confiables pero Nelson le avisa sobre una noticia que involucraba al alcalde Joe Quimby. Tras revelar dicha noticia, Homero obtiene popularidad en internet. Después de haber revelado varios escándalos y noticias, se determinó que el ganador del Premio Pulitzer, sería el Sr. X, pero como éste era anónimo, el premio sería dado en calidad de donación. Esto hace que Homer (en su egoísmo) revele la identidad del Sr. X a fin de poder tener el premio.
-                </p>
-            </div> 
-        </div>
-    </main>
-
+        <main>
+          <div  id="container" class="container" >
+              <div class="container-right">
+                  <img class="bio-img" src="assets\señor_x.webp" alt="homero">
+                  <p class="text-bio">
+              <div class="item-section">
+                <div class="item-container">
+                  <h3 id="car1">Vehicle name</h3>
+                  <img src="assets\MotorSports_Home.jpg" name="" alt="acá iría la foto de un carro to cheto">
+                  <h4 id="car-price1" style="color:goldenrod">$-</h4>
+                  <h4>Features</h4>
+                  <p id="car-item1"><i>empty</i></p>
+                  <button class="button-ask">Ask</button>
+                </div>
+  
+                <div class="item-container">
+                  <h3 id="car2">Vehicle name</h3>
+                  <img src="assets\MotorSports_Home.jpg" name="" alt="acá iría la foto de un carro to cheto">
+                  <h4 id="car-price2" style="color:goldenrod">$-</h4>
+                  <h4>Features</h4>
+                  <p id="car-item2"><i>empty</i></p>
+                  <button class="button-ask">Ask</button>
+                </div>
+  
+                <div class="item-container">
+                  <h3 id="car3">Vehicle name</h3>
+                  <img src="assets\MotorSports_Home.jpg" name="" alt="acá iría la foto de un carro to cheto">
+                  <h4 id="car-price3" style="color:goldenrod">$-</h4>
+                  <h4>Features</h4>
+                  <p id="car-item3"><i>empty</i></p>
+                  <button class="button-ask">Ask</button>
+                </div>
+  
+                <div class="item-container">
+                  <h3 id="car4">Vehicle name</h3>
+                  <img src="assets\MotorSports_Home.jpg" name="" alt="acá iría la foto de un carro to cheto">
+                  <h4 id="car-price4" style="color:goldenrod">$-</h4>
+                  <h4>Features</h4>
+                  <p id="car-item4"><i>empty</i></p>
+                  <button class="button-ask">Ask</button>
+                </div>
+  
+                <div class="item-container">
+                  <h3 id="car5">Vehicle name</h3>
+                  <img src="assets\MotorSports_Home.jpg" name="" alt="acá iría la foto de un carro to cheto">
+                  <h4 id="car-price5" style="color:goldenrod">$-</h4>
+                  <h4>Features</h4>
+                  <p id="car-item5"><i>empty</i></p>
+                  <button class="button-ask">Ask</button>
+                </div>
+  
+                <div class="item-container" hidden>
+                  <h3 id="car6">Vehicle name</h3>
+                  <img src="photo.jpg" name="" alt="acá iría la foto de un carro to cheto">
+                  <h4 id="car-price6" style="color:goldenrod">$-</h4>
+                  <h4>Features</h4>
+                  <p id="car-item6"><i>empty</i></p>
+                  <button class="button-ask">Ask</button>
+                </div>
+  
+                <div class="item-container" hidden>
+                  <h3 id="car7">Vehicle name</h3>
+                  <img src="photo.jpg" name="" alt="acá iría la foto de un carro to cheto">
+                  <h4 id="car-price7" style="color:goldenrod">$-</h4>
+                  <h4>Features</h4>
+                  <p id="car-item7"><i>empty</i></p>
+                  <button class="button-ask">Ask</button>
+                </div>
+  
+                <div class="item-container" hidden>
+                  <h3 id="car8">Vehicle name</h3>
+                  <img src="photo.jpg" name="" alt="acá iría la foto de un carro to cheto">
+                  <h4 id="car-price8" style="color:goldenrod">$-</h4>
+                  <h4>Features</h4>
+                  <p id="car-item8"><i>empty</i></p>
+                  <button class="button-ask">Ask</button>
+                </div>
+              </div>
+  
+              </div> 
+          </div>
+      </main>
     <!--Este es el footer donde va las directiones y numeros y etc.-->
     <footer>
 
