--- a/fe/cars.html
+++ b/fe/cars.html
@@ -42,13 +42,14 @@
             </div>
           </nav>
 </header>
-    <!-- Body: acá debería ir todo el contenido -->
+<div id="page-content">
+    <!-- Body: acá debería ir todo el contenido 
     <main>
         <div  id="container" class="container" >
             <div class="container-right">
                 <p class="text-bio">
             <div class="item-section">
-              <div class="item-container">
+              <div id="item-container" class="item-container">
                 <h3 id="car1">Vehicle name</h3>
                 <img src="assets\MotorSports_Home.jpg" name="" alt="acá iría la foto de un carro to cheto">
                 <h4 id="car-price1" style="color:goldenrod">$-</h4>
@@ -124,7 +125,8 @@
             </div> 
         </div>
     </main>
-
+-->
+</div>
     <!--Este es el footer donde va las directiones y numeros y etc.-->
     <footer>
 
