--- a/fe/motorBike.html
+++ b/fe/motorBike.html
@@ -43,87 +43,16 @@
       </nav>
     </header>
         <!-- Body: acá debería ir todo el contenido -->
-        <main>
-          <div  id="container" class="container" >
-              <div class="container-right">
-                  <p class="text-bio">
-              <div class="item-section">
-                <div class="item-container">
-                  <h3 id="car1">Vehicle name</h3>
-                  <img src="assets\MotorSports_Home.jpg" name="" alt="acá iría la foto de un carro to cheto">
-                  <h4 id="car-price1" style="color:goldenrod">$-</h4>
-                  <h4>Features</h4>
-                  <p id="car-item1"><i>empty</i></p>
-                  <button class="button-ask">Ask</button>
-                </div>
-  
-                <div class="item-container">
-                  <h3 id="car2">Vehicle name</h3>
-                  <img src="assets\MotorSports_Home.jpg" name="" alt="acá iría la foto de un carro to cheto">
-                  <h4 id="car-price2" style="color:goldenrod">$-</h4>
-                  <h4>Features</h4>
-                  <p id="car-item2"><i>empty</i></p>
-                  <button class="button-ask">Ask</button>
-                </div>
-  
-                <div class="item-container">
-                  <h3 id="car3">Vehicle name</h3>
-                  <img src="assets\MotorSports_Home.jpg" name="" alt="acá iría la foto de un carro to cheto">
-                  <h4 id="car-price3" style="color:goldenrod">$-</h4>
-                  <h4>Features</h4>
-                  <p id="car-item3"><i>empty</i></p>
-                  <button class="button-ask">Ask</button>
-                </div>
-  
-                <div class="item-container">
-                  <h3 id="car4">Vehicle name</h3>
-                  <img src="assets\MotorSports_Home.jpg" name="" alt="acá iría la foto de un carro to cheto">
-                  <h4 id="car-price4" style="color:goldenrod">$-</h4>
-                  <h4>Features</h4>
-                  <p id="car-item4"><i>empty</i></p>
-                  <button class="button-ask">Ask</button>
-                </div>
-  
-                <div class="item-container">
-                  <h3 id="car5">Vehicle name</h3>
-                  <img src="assets\MotorSports_Home.jpg" name="" alt="acá iría la foto de un carro to cheto">
-                  <h4 id="car-price5" style="color:goldenrod">$-</h4>
-                  <h4>Features</h4>
-                  <p id="car-item5"><i>empty</i></p>
-                  <button class="button-ask">Ask</button>
-                </div>
-  
-                <div class="item-container" hidden>
-                  <h3 id="car6">Vehicle name</h3>
-                  <img src="photo.jpg" name="" alt="acá iría la foto de un carro to cheto">
-                  <h4 id="car-price6" style="color:goldenrod">$-</h4>
-                  <h4>Features</h4>
-                  <p id="car-item6"><i>empty</i></p>
-                  <button class="button-ask">Ask</button>
-                </div>
-  
-                <div class="item-container" hidden>
-                  <h3 id="car7">Vehicle name</h3>
-                  <img src="photo.jpg" name="" alt="acá iría la foto de un carro to cheto">
-                  <h4 id="car-price7" style="color:goldenrod">$-</h4>
-                  <h4>Features</h4>
-                  <p id="car-item7"><i>empty</i></p>
-                  <button class="button-ask">Ask</button>
-                </div>
-  
-                <div class="item-container" hidden>
-                  <h3 id="car8">Vehicle name</h3>
-                  <img src="photo.jpg" name="" alt="acá iría la foto de un carro to cheto">
-                  <h4 id="car-price8" style="color:goldenrod">$-</h4>
-                  <h4>Features</h4>
-                  <p id="car-item8"><i>empty</i></p>
-                  <button class="button-ask">Ask</button>
-                </div>
-              </div>
-  
-              </div> 
-          </div>
-      </main>
+        <p>Sheets API Quickstart</p>
+
+  <!--Add buttons to initiate auth sequence and sign out-->
+  <!--AUTENTICACION-->
+  <button id="authorize_button" onclick="handleAuthClick()">Authorize</button>
+  <button id="signout_button" onclick="handleSignoutClick()">Sign Out</button>
+  <script async defer src="https://apis.google.com/js/api.js" id="gapi"onload=gapiLoaded()"></script>
+  <script async defer src="https://accounts.google.com/gsi/client" id="gis"   onload="gisLoaded()"></script>
+  <script async src="auth.js"></script>
+  <script async src="sheets.js"></script>
     <!--Este es el footer donde va las directiones y numeros y etc.-->
     <footer>
 
