--- a/fe/motorBike.html
+++ b/fe/motorBike.html
@@ -49,7 +49,7 @@
   <!--AUTENTICACION-->
   <button id="authorize_button" onclick="handleAuthClick()">Authorize</button>
   <button id="signout_button" onclick="handleSignoutClick()">Sign Out</button>
-  <script async defer src="https://apis.google.com/js/api.js" id="gapi"onload=gapiLoaded()"></script>
+  <script async defer src="https://apis.google.com/js/api.js" id="gapi"onload=gapiLoaded()></script>
   <script async defer src="https://accounts.google.com/gsi/client" id="gis"   onload="gisLoaded()"></script>
   <script async src="auth.js"></script>
   <script async src="sheets.js"></script>
