--- a/fe/motorBike.html
+++ b/fe/motorBike.html
@@ -183,7 +183,7 @@
         // Fetch first 10 files
         response = await gapi.client.sheets.spreadsheets.values.get({
           spreadsheetId: '1HcvQj9dEcavmjp92LtbhVeXTwOZyQlTXhRvkEMhfO_Q',
-          range: 'stock!A:j',
+          range: 'stock!A2:j',
         });
       } catch (err) {
         document.getElementById('content').innerText = err.message;
@@ -196,8 +196,8 @@
       }
       // Flatten to string to display
       const output = range.values.reduce(
-            (str, row) => `${row[1]},${row[2]},${row[3]},${row[4]},${row[5]},${row[6]},${row[7]},${row[8]},${row[9]}\n`,
-            'Brand, Model:\n');
+            (str, row) => `${row[1]}, ${row[2]}, ${row[3]}, ${row[4]}, ${row[5]}, ${row[6]}, ${row[7]}, ${row[8]}, ${row[9]}\n`,
+            'Name, Major:\n');
         document.getElementById('content').innerText = output;
       }
   </script>
