--- a/fe/cars.html
+++ b/fe/cars.html
@@ -42,7 +42,12 @@
             </div>
           </nav>
 </header>
-<div id="page-content">
+<main>
+
+  <br><br><br><div id="carsAll" onload="displayVehiculos"></div>
+
+</main>
+<!-- <div id="page-content">
 </div>
 
 
