--- a/fe/cars.html
+++ b/fe/cars.html
@@ -42,7 +42,7 @@
             </div>
           </nav>
 </header>
-<div id="page-content">
+<div id="page-content-cars">
    
 </div>
     <!--Este es el footer donde va las directiones y numeros y etc.-->
