--- a/fe/index.html
+++ b/fe/index.html
@@ -45,16 +45,88 @@
 
     <!-- Body: acá debería ir todo el contenido -->
     <main>
-        <div  id="container" class="container" >
-                <!-- <div class="container-left"></div>-->
-                <div class="container-right">
-                    <section>
-                      <h1><strong>Welcome to the biggest car-dealer in the region!</strong></h1>
-                    </section>
-                    <img class="ferraris-img" src="assets\MotorSports_Home.jpg" alt="ferraris">
-
-                </div> 
+      <div id="container" class="container">
+        <div class="container-right">
+          <section>
+            <h1 class="home-title"><strong>Welcome to the biggest car-dealer in the region!</strong></h1>
+          </section>
+          <div class="img-container">
+            <img class="home-img" src="assets\MotorSports_Home.jpg" alt="ferraris">
+          </div>
         </div>
+      </div>
+
+      <table>
+        <tr>
+          <th colspan="2"><h1>Acerca de los invetores de este proyecto</h1></th>
+        </tr>
+        <tr>
+<!-- -------------------------------- -->
+          <td>
+            <section>
+              <header>
+                <div id="info-personal"><h2>Tomás Sachini</h2>
+                  <img src="fe\assets\foto comprimida.jpg" alt="Foto de una persona">
+                  <ul>
+                    <li>Full Stack Developer Jr.</li>
+                    <li>Ingeniero en programación</li>
+                    <li>Licensciado en seguridad cibernética</li>
+                    <li>Licenciado en Big Data</li>
+                  </ul>
+                  <p>Me considero un amante de los automóbiles. 
+                    Poder ser uno de los creadores de ete Car-dealer y 
+                    facilitar el comercio privado y honesto entre las personas 
+                    es mi mayor meta profesional.</p>
+                </div>
+              </header>
+              <main>
+                <div id="experiencia">
+                  <div id="tabajo4">
+                    <h4>Concesionaria Renault, 2018-2020</h4>
+                    <img src="fe\assets\renault.png" alt="logo de Renault">
+                    <p><strong>Gerente de marketing y vendedor de automóbiles</strong></p>
+                    <p>Más de 100 vehículos vendidos.</p>
+                    <p>Encargado de las campañas de marketing durante todo 2019 y asesor de esta area en 2020</p>
+
+                  </div>
+                </div>
+              </main>
+            </section>
+
+          </td>
+<!-- ------------------------- -->
+          <td>
+            <section>
+              <header>
+                <div id="info-personal"><h2>Joaquín Cardillo</h2>
+                  <img src="fe\assets\foto comprimida.jpg" filetype=".jpg" alt="Foto de una persona">
+                  <ul>
+                    <li>Full Stack Developer Jr.</li>
+                    <li>Traductor  profesional de inglés-español</li>
+                  </ul>
+                  <p>Me considero un amante de los automóbiles. 
+                    Poder ser uno de los creadores de ete Car-dealer y 
+                    facilitar el comercio privado y honesto entre las personas 
+                    es mi mayor meta profesional.</p>
+                </div>
+              </header>
+              <main>
+                <div id="experiencia">
+                  <div id="tabajo4">
+                    <h4>Concesionaria Renault, 2018-2020</h4>
+                    <img src="fe\assets\renault.png" alt="logo de Renault">
+                    <p><strong>Gerente de marketing y vendedor de automóbiles</strong></p>
+                    <p>Más de 100 vehículos vendidos.</p>
+                    <p>Encargado de las campañas de marketing durante todo 2019 y asesor de esta area en 2020</p>
+
+                  </div>
+                </div>
+              </main>
+            </section>
+
+          </td>
+        </tr>
+      </table>
     </main>
 
     <!--Este es el footer donde va las directiones y numeros y etc.-->    
