--- a/fe/index.html
+++ b/fe/index.html
@@ -81,13 +81,18 @@
               </header>
               <main>
                 <div id="experiencia">
-                  <div id="tabajo4">
-                    <h4>Concesionaria Renault, 2018-2020</h4>
+                  <div class="tabajo">
+                    <h4>Concesionaria Audi, 2017-2019</h4>
+                    <img src="fe\assets\renault.png" alt="logo de Audi">
+                    <p><strong>Vendedor de automóbiles</strong></p>
+                    <p>Más de 250 vehículos vendidos.</p>
+                  </div>
+                  <div class="tabajo">
+                    <h4> Seguridad cibernética en Concesionaria Jeep, 2019-2022</h4>
                     <img src="fe\assets\renault.png" alt="logo de Renault">
                     <p><strong>Gerente de marketing y vendedor de automóbiles</strong></p>
                     <p>Más de 100 vehículos vendidos.</p>
                     <p>Encargado de las campañas de marketing durante todo 2019 y asesor de esta area en 2020</p>
-
                   </div>
                 </div>
               </main>
@@ -99,7 +104,7 @@
             <section>
               <header>
                 <div id="info-personal"><h2>Joaquín Cardillo</h2>
-                  <img src="fe\assets\foto comprimida.jpg" filetype=".jpg" alt="Foto de una persona">
+                  <img src="fe\assets\foto comprimida.jpg" alt="Foto de una persona">
                   <ul>
                     <li>Full Stack Developer Jr.</li>
                     <li>Traductor  profesional de inglés-español</li>
@@ -112,7 +117,7 @@
               </header>
               <main>
                 <div id="experiencia">
-                  <div id="tabajo4">
+                  <div class="trabajo">
                     <h4>Concesionaria Renault, 2018-2020</h4>
                     <img src="fe\assets\renault.png" alt="logo de Renault">
                     <p><strong>Gerente de marketing y vendedor de automóbiles</strong></p>
