--- a/fe/index.html
+++ b/fe/index.html
@@ -81,13 +81,13 @@
               </header>
               <main>
                 <div id="experiencia">
-                  <div class="tabajo">
+                  <div class="trabajo">
                     <h4>Concesionaria Audi, 2017-2019</h4>
                     <img src="fe\assets\renault.png" alt="logo de Audi">
                     <p><strong>Vendedor de automóbiles</strong></p>
                     <p>Más de 250 vehículos vendidos.</p>
                   </div>
-                  <div class="tabajo">
+                  <div class="trabajo">
                     <h4> Seguridad cibernética en Concesionaria Jeep, 2019-2022</h4>
                     <img src="fe\assets\renault.png" alt="logo de Renault">
                     <p><strong>Gerente de marketing y vendedor de automóbiles</strong></p>
