--- a/fe/post.html
+++ b/fe/post.html
@@ -55,12 +55,12 @@
       <label for="email">Email :</label>
       <input type="email" id="email" name="email">
       <br>
-      <label for="email">Select what kind of vehicle are you pusblishing :</label>
-      <input type="radio" name="vehicle" value="car">
-      Car
-      <input type="radio" name="vehicle" value="motorbike">
-      MotorBike
-      <br>
+      <label for="vehicle">Select the type of vehicle you are promoting:</label>
+      <input type="radio" id="car-type" name="vehicle" value="car">
+      <label for="car-type">Car</label>
+      <input type="radio" id="motorbike-type" name="vehicle" value="motorbike">
+      <label for="motorbike-type">Motorbike</label>
+
       <label for="brand">Brand:</label>
       <input type="text" id="brand" name="brand">
       <br>
