--- a/fe/index.html
+++ b/fe/index.html
@@ -65,7 +65,7 @@
           <td>
             <section>
               <header>
-                <div id="info-personal"><h2>Tomás Sachini</h2>
+                <div class="info-personal"><h2>Tomás Sachini</h2>
                   <img src="fe\assets\foto comprimida.jpg" alt="Foto de una persona">
                   <ul>
                     <li>Full Stack Developer Jr.</li>
@@ -80,7 +80,7 @@
                 </div>
               </header>
               <main>
-                <div id="experiencia">
+                <div class="experiencia">
                   <div class="trabajo">
                     <h4>Concesionaria Audi, 2017-2019</h4>
                     <img src="fe\assets\renault.png" alt="logo de Audi">
@@ -103,7 +103,7 @@
           <td>
             <section>
               <header>
-                <div id="info-personal"><h2>Joaquín Cardillo</h2>
+                <div class="info-personal"><h2>Joaquín Cardillo</h2>
                   <img src="fe\assets\foto comprimida.jpg" alt="Foto de una persona">
                   <ul>
                     <li>Full Stack Developer Jr.</li>
@@ -116,14 +116,30 @@
                 </div>
               </header>
               <main>
-                <div id="experiencia">
+                <div class="experiencia">
                   <div class="trabajo">
                     <h4>Concesionaria Renault, 2018-2020</h4>
                     <img src="fe\assets\renault.png" alt="logo de Renault">
                     <p><strong>Gerente de marketing y vendedor de automóbiles</strong></p>
                     <p>Más de 100 vehículos vendidos.</p>
                     <p>Encargado de las campañas de marketing durante todo 2019 y asesor de esta area en 2020</p>
-
+                  </div>
+                </div>
+                <div class="educacion">
+                  <div class="escuela">
+                    <h4>Especialización en aquisición y enseñanza de español como segunda lengua</h4>
+                    <p><i>UNR, 2023-presente</i></p>
+                  </div>
+                  <div class="escuela">
+                    <h4>Curso #YoProgramo</h4>
+                    <p><i>2019-2022</i></p>
+                    <p>Ministerio de economía de Argentina</p>
+                    <p>INTI</p>
+                    <p>Argentina Programa</p>
+                  </div>
+                  <div class="escuela">
+                    <h4>Traductorado público, literario y técnico-científico de inglés</h4>
+                    <p><i>Instituto Belgrano, 2019-2022</i></p>
                   </div>
                 </div>
               </main>
