--- a/fe/index.html
+++ b/fe/index.html
@@ -66,7 +66,7 @@
             <section>
               <header>
                 <div class="info-personal"><h2>Tomás Sachini</h2>
-                  <img src="fe\assets\foto comprimida.jpg" alt="Foto de una persona">
+                  <img src="assets/Foto-cv.jpg" alt="Foto de una persona">
                   <ul>
                     <li>Full Stack Developer Jr.</li>
                     <li>Ingeniero en programación</li>
@@ -104,7 +104,7 @@
             <section>
               <header>
                 <div class="info-personal"><h2>Joaquín Cardillo</h2>
-                  <img src="fe\assets\foto comprimida.jpg" alt="Foto de una persona">
+                  <img src="assets/foto comprimida.jpg" alt="Foto de una persona">
                   <ul>
                     <li>Full Stack Developer Jr.</li>
                     <li>Traductor  profesional de inglés-español</li>
